Set min-width to 0 so images could scale down as much as needed. Firefox probably has this set automatically, so make sure to test on mobile and chrome before being 100% of your site.

--- a/mangastyleapp/trending_tweets_app/static/trending_tweets_app/styles/media-images.css
+++ b/mangastyleapp/trending_tweets_app/static/trending_tweets_app/styles/media-images.css
@@ -1,5 +1,7 @@
 .media-image {
+    min-width: 0;
     width: 100%;
+    height: auto;
     object-fit: cover;
     cursor: pointer;
     opacity: 0.9;
